--- a/src/App.css
+++ b/src/App.css
@@ -21,18 +21,36 @@
   color: #09d3ac;
 }
 
-.nav-bar{
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+.game {
   display: flex;
-  justify-content: center;
-}
-
-.nav-bar a{
-  padding: 5px;
-  display: inline-block;
-}
-
-.active-users{
-  background: #282c34;
-  color: whitesmoke;
-  padding: 2px;
+  flex-direction: row;
 }
